OAKHILL/src/objects/Fund__c.object
<CustomObject>
    <fields>
        <fullName>ABA__c</fullName>
        <label>ABA#</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attention__c</fullName>
        <label>Attention</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YEN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Feeders__c</fullName>
        <label>Feeders</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund_Family__c</fullName>
        <label>Fund Family</label>
        <referenceTo>Fund_Family__c</referenceTo>
        <relationshipLabel>Fund</relationshipLabel>
        <relationshipName>Fund</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Fund_Structure__c</fullName>
        <label>Fund Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAV + Unfunded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Fund</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Fund_Family__c</columns>
        <columns>NAME</columns>
        <columns>Currency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>test</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fund Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fund</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>